[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/colored-transparent_packed.png-1060d93744aaf71fba5a21ff77972f02.stex"

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 6 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )
region_enabled = true
region_rect = Rect2( 432, 64, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 8.0
neighbor_dist = 8.0
max_speed = 40.0

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_navigation_finished"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
